# Antinuke-and-multipupose-ML-discord-bot-

./: .env.example  .gitignore  README.md  mkdocs.yml  pyproject.toml  railpack.json  requirements.txt  wrangler.toml
aegis/: __init__.py  bot.py  checks.py  command_catalog.py  config.py  converters.py  db.py  main.py  models.py  ui.py  utils.py
aegis/cogs/: __init__.py  antinuke.py  automod.py  events.py  general.py  help.py  moderation.py  settings.py
data/: antinuke-smoke.txt  automod-smoke.txt
docs/: faq.md  getting-started.md  index.md
docs/commands/: about.md  antinuke-disable.md  antinuke-enable.md  antinuke-incidents.md  antinuke-log.md  antinuke-mode.md  antinuke-protect.md  antinuke-resetfreeze.md  antinuke-status.md  antinuke-threshold.md  antinuke-trust-add.md  antinuke-trust-remove.md  antinuke-trust.md  antinuke.md  automod-anticopypasta.md  automod-antiduplicate.md  automod-antieveryone.md  automod-antiinvite.md  automod-antiraid.md  automod-antireferral.md  automod-autodehoist.md  automod-filter-add.md  automod-filter-list.md  automod-filter-remove.md  automod-filter.md  automod-ignore.md  automod-maxlines.md  automod-maxmentions.md  automod-maxrolementions.md  automod-resolvelinks.md  automod-show.md  automod-unignore.md  automod-whitelist.md  automod.md  ban.md  category-antinuke.md  category-automod.md  category-general.md  category-moderation.md  category-settings.md  (+30 more)
docs/stylesheets/: extra.css
docs/systems/: antinuke-overview.md  index.md  (+5 more)
scripts/: antinuke_smoke_test.py  automod_smoke_test.py  canary_smoke_test.py  generate_docs.py
